[gd_scene load_steps=31 format=3 uid="uid://pjlqcmcvycro"]

[ext_resource type="Texture2D" uid="uid://bofa3427wu888" path="res://assets/characters/player/SpriteSheet.png" id="1_4ptyx"]
[ext_resource type="Script" path="res://characters/player/player.gd" id="1_7k7au"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gq3j2"]
radius = 19.0
height = 74.0

[sub_resource type="Animation" id="Animation_pi2xu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fra3n"]
resource_name = "idle"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_kxj48"]
resource_name = "jump"
length = 0.60002
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 11, 12]
}

[sub_resource type="Animation" id="Animation_pa4xf"]
resource_name = "walk"
length = 0.40001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_7df8o"]
resource_name = "dash"
length = 4.0001
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ek8ev"]
_data = {
"RESET": SubResource("Animation_pi2xu"),
"dash": SubResource("Animation_7df8o"),
"idle": SubResource("Animation_fra3n"),
"jump": SubResource("Animation_kxj48"),
"walk": SubResource("Animation_pa4xf")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m2anv"]
animation = &"dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w5v23"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tml0i"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mljaw"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xsvq5"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ct73"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q60e6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vfrhu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4tgsc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_efunm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5nb45"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0yyw5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fosyb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3kjc1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i0cvk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xfskj"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0esxr"]
states/dash/node = SubResource("AnimationNodeAnimation_m2anv")
states/dash/position = Vector2(655, 0)
states/idle/node = SubResource("AnimationNodeAnimation_w5v23")
states/idle/position = Vector2(363, 100)
states/jump/node = SubResource("AnimationNodeAnimation_tml0i")
states/jump/position = Vector2(563, 201)
states/walk/node = SubResource("AnimationNodeAnimation_mljaw")
states/walk/position = Vector2(753, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_xsvq5"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_5ct73"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_q60e6"), "walk", "jump", SubResource("AnimationNodeStateMachineTransition_vfrhu"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_4tgsc"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_efunm"), "idle", "dash", SubResource("AnimationNodeStateMachineTransition_5nb45"), "dash", "idle", SubResource("AnimationNodeStateMachineTransition_0yyw5"), "walk", "dash", SubResource("AnimationNodeStateMachineTransition_fosyb"), "jump", "dash", SubResource("AnimationNodeStateMachineTransition_3kjc1"), "dash", "jump", SubResource("AnimationNodeStateMachineTransition_i0cvk"), "dash", "walk", SubResource("AnimationNodeStateMachineTransition_xfskj")]
graph_offset = Vector2(0, -16.279)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_14gqs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jp1vf"]
radius = 18.0
height = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rt88w"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhblr"]
size = Vector2(20, 56)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_7k7au")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gq3j2")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_4ptyx")
hframes = 6
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ek8ev")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_0esxr")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_14gqs")

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 1080

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShapeTop" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -14)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jp1vf")

[node name="CollisionShapeBottom" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 18)
shape = SubResource("CircleShape2D_rt88w")

[node name="RopeDetectingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RopeDetectingArea"]
shape = SubResource("RectangleShape2D_xhblr")

[node name="FloorRayCast" type="RayCast2D" parent="."]
position = Vector2(0, 30)
enabled = false
target_position = Vector2(0, 10)

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(1.8, 2.3)

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DustTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.01

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier" to="." method="_on_visible_on_screen_notifier_screen_exited"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="DustTimer" to="." method="_on_dust_timer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
